byovpc/e2-newvpc-cf_template.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "AWS CloudFormation Sample for a Databricks All-in-one NPIP Workspace Deployment in New BYO VPC.",
	"Parameters": {
		"VPCCidr": {
			"AllowedPattern": "^([0-9]{1,3}\\.){3}[0-9]{1,3}\\/(1[6-9]|2[0-4])$",
			"ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-24",
			"Default": "10.173.0.0/16",
			"Description": "CIDR block for the Databricks Workspace VPC",
			"Type": "String"
		},
		"Subnet1Cidr": {
			"AllowedPattern": "^([0-9]{1,3}\\.){3}[0-9]{1,3}\\/(1[7-9]|2[0-5])$",
			"ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/17-25",
			"Default": "10.173.4.0/22",
			"Description": "CIDR block for the Databricks Workspace Subnet 1",
			"Type": "String"
		},
		"Subnet2Cidr": {
			"AllowedPattern": "^([0-9]{1,3}\\.){3}[0-9]{1,3}\\/(1[7-9]|2[0-5])$",
			"ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/17-25",
			"Default": "10.173.8.0/22",
			"Description": "CIDR block for the Databricks Workspace Subnet 2",
			"Type": "String"
		},
		"NatSubnetCidr": {
			"AllowedPattern": "^([0-9]{1,3}\\.){3}[0-9]{1,3}\\/(2[6-9])$",
			"ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/26-29",
			"Default": "10.173.16.0/28",
			"Description": "CIDR block for the Databricks Workspace NAT",
			"Type": "String"
		},
		"VPCName": {
			"Default": "Databricks-E2-Workspace-VPC",
			"Description": "Name of the Databricks Workspace VPC",
			"Type": "String"
		},
		"Subnet1Name": {
			"Default": "Databricks-E2-Workspace-Subnet1",
			"Description": "Name of the Databricks Workspace Subnet 1",
			"Type": "String"
		},
		"Subnet2Name": {
			"Default": "Databricks-E2-Workspace-Subnet2",
			"Description": "Name of the Databricks Workspace Subnet 2",
			"Type": "String"
		},
		"NatSubnetName": {
			"Default": "Databricks-E2-Workspace-Nat-Subnet",
			"Description": "Name of the Databricks Workspace Nat Subnet",
			"Type": "String"
		},
		"IGWName": {
			"Default": "Databricks-E2-Workspace-IGW",
			"Description": "Name of the Databricks Workspace Internet Gateway",
			"Type": "String"
		},
		"NATGWName": {
			"Default": "Databricks-E2-Workspace-NATGW",
			"Description": "Name of the Databricks Workspace NAT Gateway",
			"Type": "String"
		},
		"PrivateRTName": {
			"Default": "Databricks-E2-Workspace-Private-RT",
			"Description": "Name of the Databricks Workspace Private Route Table",
			"Type": "String"
		},
		"PublicRTName": {
			"Default": "Databricks-E2-Workspace-Public-RT",
			"Description": "Name of the Databricks Workspace Public Route Table",
			"Type": "String"
		},
		"SecurityGroupName": {
			"Default": "Databricks-E2-Workspace-SG",
			"Description": "Name of the Databricks Workspace Security Group",
			"Type": "String"
		},
		"OwnerTagValue": {
			"Default": "abhinav.garg@databricks.com",
			"Description": "Value for the owner tag",
			"Type": "String"
		}
	},
	"Resources": {
		"VPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": {
					"Ref": "VPCCidr"
				},
				"EnableDnsSupport": true,
				"EnableDnsHostnames": true,
				"Tags": [{
						"Key": "owner",
						"Value": {
							"Ref": "OwnerTagValue"
						}
					},
					{
						"Key": "name",
						"Value": {
							"Ref": "VPCName"
						}
					}
				]
			}
		},
		"Subnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"AvailabilityZone": {
					"Fn::Select": ["0", {
						"Fn::GetAZs": ""
					}]
				},
				"CidrBlock": {
					"Ref": "Subnet1Cidr"
				},
				"Tags": [{
						"Key": "owner",
						"Value": {
							"Ref": "OwnerTagValue"
						}
					},
					{
						"Key": "name",
						"Value": {
							"Ref": "Subnet1Name"
						}
					}
				]
			}
		},
		"Subnet2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"AvailabilityZone": {
					"Fn::Select": ["1", {
						"Fn::GetAZs": ""
					}]
				},
				"CidrBlock": {
					"Ref": "Subnet2Cidr"
				},
				"Tags": [{
						"Key": "owner",
						"Value": {
							"Ref": "OwnerTagValue"
						}
					},
					{
						"Key": "name",
						"Value": {
							"Ref": "Subnet2Name"
						}
					}
				]
			}
		},
		"NatSubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"MapPublicIpOnLaunch": true,
				"AvailabilityZone": {
					"Fn::Select": ["1", {
						"Fn::GetAZs": ""
					}]
				},
				"CidrBlock": {
					"Ref": "NatSubnetCidr"
				},
				"Tags": [{
						"Key": "owner",
						"Value": {
							"Ref": "OwnerTagValue"
						}
					},
					{
						"Key": "name",
						"Value": {
							"Ref": "NatSubnetName"
						}
					}
				]
			}
		},
		"InternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [{
						"Key": "owner",
						"Value": {
							"Ref": "OwnerTagValue"
						}
					},
					{
						"Key": "name",
						"Value": {
							"Ref": "IGWName"
						}
					}
				]
			}
		},
		"AttachInternetGateway": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"InternetGatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"PublicRouteTable": {
			"DependsOn": "AttachInternetGateway",
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
						"Key": "owner",
						"Value": {
							"Ref": "OwnerTagValue"
						}
					},
					{
						"Key": "name",
						"Value": {
							"Ref": "PublicRTName"
						}
					}
				]
			}
		},
		"RouteToIGW": {
			"DependsOn": "AttachInternetGateway",
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"NatSubnetRTAssociation": {
			"DependsOn": "RouteToIGW",
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "NatSubnet"
				},
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				}
			}
		},
		"NATElasticIP": {
			"DependsOn": "NatSubnetRTAssociation",
			"Type": "AWS::EC2::EIP",
			"Properties": {
				"Domain": "vpc",
				"Tags": [{
					"Key": "owner",
					"Value": {
						"Ref": "OwnerTagValue"
					}
				}]
			}
		},
		"NATGateway": {
			"DependsOn": "NATElasticIP",
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": [
						"NATElasticIP",
						"AllocationId"
					]
				},
				"SubnetId": {
					"Ref": "NatSubnet"
				},
				"Tags": [{
						"Key": "owner",
						"Value": {
							"Ref": "OwnerTagValue"
						}
					},
					{
						"Key": "name",
						"Value": {
							"Ref": "NATGWName"
						}
					}
				]
			}
		},
		"PrivateRouteTable": {
			"DependsOn": "NATGateway",
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
						"Key": "owner",
						"Value": {
							"Ref": "OwnerTagValue"
						}
					},
					{
						"Key": "name",
						"Value": {
							"Ref": "PrivateRTName"
						}
					}
				]
			}
		},
		"RouteToNAT": {
			"DependsOn": "NATGateway",
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "PrivateRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NATGateway"
				}
			}
		},
		"Subnet1RTAssociation": {
			"DependsOn": "RouteToNAT",
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet1"
				},
				"RouteTableId": {
					"Ref": "PrivateRouteTable"
				}
			}
		},
		"Subnet2RTAssociation": {
			"DependsOn": "RouteToNAT",
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet2"
				},
				"RouteTableId": {
					"Ref": "PrivateRouteTable"
				}
			}
		},
		"WorkspaceSecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"GroupDescription": "Allow access from within the same security group",
				"GroupName": {
					"Ref": "SecurityGroupName"
				}
			}
		},
		"WorkspaceSGTCPIngress": {
			"DependsOn": "WorkspaceSecurityGroup",
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "WorkspaceSecurityGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": "0",
				"ToPort": "65535",
				"SourceSecurityGroupId": {
					"Ref": "WorkspaceSecurityGroup"
				}
			}
		},
		"WorkspaceSGUDPIngress": {
			"DependsOn": "WorkspaceSecurityGroup",
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "WorkspaceSecurityGroup"
				},
				"IpProtocol": "udp",
				"FromPort": "0",
				"ToPort": "65535",
				"SourceSecurityGroupId": {
					"Ref": "WorkspaceSecurityGroup"
				}
			}
		},
		"WorkspaceSGAllEgress": {
			"DependsOn": "WorkspaceSecurityGroup",
			"Type": "AWS::EC2::SecurityGroupEgress",
			"Properties": {
				"GroupId": {
					"Ref": "WorkspaceSecurityGroup"
				},
				"IpProtocol": "-1",
				"CidrIp": "0.0.0.0/0"
			}
		}
	},
	"Outputs": {
		"VPCOut": {
			"Description": "VPC Id",
			"Value": {
				"Ref": "VPC"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-VPC"
				}
			}
		},
		"WorkspaceSecurityGroupOut": {
			"Description": "Workspace Security Group Id",
			"Value": {
				"Ref": "WorkspaceSecurityGroup"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-SecurityGroup"
				}
			}
		},
		"NATElasticIPOut": {
			"Description": "NAT Public IP address",
			"Value": {
				"Ref": "NATElasticIP"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-NATEIP"
				}
			}
		}
	}
}
